# editor

./: .travis.yml  CHANGELOG.md  README.md  editor-test.aux  editor-test.prof  editor-test.ps  editor.cabal  edt_benchmark.html
data/: tc_one.data  tc_three.data
doc/: Design.txt  Overview.txt  Testing.txt
src/: Actions.hs  Editor.hs  Types.hs
src-benchmark/: Main.hs
src-exe/: Main.hs
src-test/: Main.hs  PropTests.hs
src-test/UnitTests/: Scaffolding.hs  UnitTests.hs
